--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ height: 100%;
   background-color: #ffffff;
   width: 960px;
   display: inline-block;
-  height: 500px;
+  height: auto;
   margin-top: 30px;
   padding: 20px;
 
@@ -63,7 +63,7 @@ height: 100%;
   background-color: #ffffff;
   width: 960px;
   display: inline-block;
-  height: 500px;
+  height: autopx;
   margin-top: 30px;
   padding: 20px;
 
