--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 * {
-    box-sizing: border-box;
-     text-align: center;
+    
+     
     font-family: 'Avenir Black', 'Arial Black', sans-serif;
   }
 
@@ -66,6 +66,24 @@ height: 100%;
   height: autopx;
   margin-top: 30px;
   padding: 20px;
+
+
+}
+
+#page-footer {
+
+  
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+  background-color: #333333;
+  padding: 10px;
+
 
 
 }
